@@ -1,3 +1,7 @@
+2012-05-04  Andreas K. Foerster  <info@akfoerster.de>
+
+	* pascal/akfavatar.pas: updated
+
 2012-05-02  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatr.h, avatar.c (avt_avatar_image_xbm, avt_show_image_xbm):
